--- a/demo/demo.html
+++ b/demo/demo.html
@@ -45,9 +45,20 @@
 
     document.getElementById('transfer').addEventListener('click', function() {
       const htmlStr = editor.txt.html()
-      document.getElementById('unity').value = richtext-parser.parseUnity(htmlStr)
-      document.getElementById('egret').value = richtext-parser.parseEgret(htmlStr)
-      // document.getElementById('egret').value = richtext-parser.parseEgret(htmlStr)
+      const { parseEgret, parseUnity } = window['richtext-parser']
+      const set = {
+        sizeMap: {
+          1: 36,
+          2: 28,
+          3: 24,
+          4: 20,
+          5: 16,
+          6: 14,
+          7: 12,
+        }
+      }
+      document.getElementById('unity').value = parseUnity(htmlStr, set)
+      document.getElementById('egret').value = parseEgret(htmlStr, set)
     })
 
   </script>
