--- a/demo/demo.html
+++ b/demo/demo.html
@@ -12,8 +12,10 @@
   <script src="../dist/richtext-parser.umd.js"></script>
 </head>
 <body style="padding: 60px">
-  <div id="div2"></div>
-  <div id="div1" style="height: 500px;"></div>
+  <div style="z-index:999">
+    <div id="div2"></div>
+    <div id="div1" style="height: 500px;"></div>
+  </div>
 
 
   <button id="transfer">转化</button>
@@ -36,9 +38,9 @@
       selector: '#div1',
       config: {
         MENU_CONF: {},
-        placeholder: '请输入内容'
+        placeholder: '请输入内容',
       },
-      mode: 'defalut'
+      mode: 'simple'
     })
 
     const toolbar = E.createToolbar({
@@ -52,6 +54,7 @@
           'color',
           '|',
           'fontSize',
+          '|', 
           'lineHeight',
           '|', 
           'justifyLeft',
@@ -61,6 +64,7 @@
           'undo',
           'redo',
           '|', 
+          'clearStyle',
           'emotion',
           'fullScreen',
         ],
