--- a/demo/demo.html
+++ b/demo/demo.html
@@ -9,7 +9,7 @@
   <link href="https://cdn.jsdelivr.net/npm/@wangeditor/editor@latest/dist/css/style.css" rel="stylesheet">
   <!-- 引入 js -->
   <script src="https://cdn.jsdelivr.net/npm/@wangeditor/editor@latest/dist/index.min.js"></script>
-  <script src="../dist/richtext-parse-to-unity-egret.umd.js"></script>
+  <script src="https://cdn.jsdelivr.net/npm/richtext-parse-to-unity-egret"></script>
 </head>
 <body style="padding: 60px">
   <div style="z-index:999">
